# labres

./: .env-example  LICENSE  README.md  docker-compose.yml
server/: Dockerfile  pyproject.toml
server/base/: settings.py  urls.py
server/labres/: apps.py  models.py
server/labres/migrations/: 0001_initial.py
