[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Denis Kozyrev <d.kozyrev@labmedia.su>"]

[tool.poetry.dependencies]
python = "~3.11"
django = "~4.2"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
